# goszakup_agent

./: .env.example  Dockerfile  README.md  docker-compose.yml  explore_journal.py  pyproject.toml  reset_db.py
alembic/: env.py
alembic/versions/: 008ba9a56474_add_ref_kato.py  45e7f937cd7c_add_full_procurement_lifecycle.py  cf81686f6bc5_add_ref_enstru_table.py  d4f3d33d17b9_initial_schema.py  d7f0124b07b0_remove_description_ru_from_lots.py
src/: config.py
src/agent/: llm.py  tools.py
src/analytics/: engine.py  fair_price.py  find_top_ktrus.py
src/api/: main.py
src/db/: models.py  session.py
src/etl/: clean_existing_lots.py  client.py  enrich_enstru.py  enrich_kato.py  enrich_missing_announcements.py  enrich_subjects.py  load_contracts.py  load_historical.py  load_plans.py  sync_daily.py
src/utils/: cleaners.py
