[project]
name = "goszakup-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "openai>=2.23.0",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
