[project]
name = "goszakup-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.133.0",
    "openai>=2.23.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "uvicorn>=0.41.0",
    "langchain>=1.2.10",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
